change internal links to references

--- a/_includes/fnc/link.html
+++ b/_includes/fnc/link.html
@@ -5,7 +5,7 @@
 {% if include.item.site %}
     {{ site[include.item.site] }}
 {% elsif include.item.internal %}
-    {{ include.item.internal | relativurl }}
+    {% link {{ include.item.internal }} %}
 {% elsif include.item.link %}
     {{ include.item.link | include fnc/link.html }}
 {% elsif include.item.home %}
