flex publisher image

--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 <h1>
-  <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-circle" width="40" height="40">
+  <div class="flex">
+    <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-circle" width="40" height="40" style="margin:0px">
   {{ page.name }}
+  </div>
 </h1>
 
 <div>
