--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto min-h-screen">
+    {% if layout.notitle != true %}
     <h2>{{ page.title }}</h2>
+    {% endif %}
     {{ content }}
 </article>
