--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -1,12 +1,13 @@
 ---
-layout: default
+layout: content
+notitle: true
 ---
 <h1>
   <div class="flex">
     {% if page.github %}
     <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-circle" width="40" height="40" style="margin:0px">
     {% endif %}
-  {{ page.name }}
+    {{ page.name }}
   </div>
 </h1>
 
