--- a/_includes/partial/publisher_ref.html
+++ b/_includes/partial/publisher_ref.html
@@ -1,4 +1,4 @@
 {% assign publisher_ref = site.publishers | where: 'short_name', include.pub | first %}
 <a href="{{ publisher_ref.url | relative_url }}" class="custom-underline-blue">
-by <span class="inline-flex"><img src="https://github.com/{{ include.pub }}.png?size=40" alt="mdo" class="self-center w-5 h-5 rounded-full mx-1"> {{ include.pub }}</span>
+by <span class="inline-flex"><img src="https://github.com/{{ include.pub }}.png?size=40" alt="mdo" class="self-center w-5 h-5 rounded-full mx-1" style="margin:0px"> {{ include.pub }}</span>
 </a>
