--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -24,7 +24,7 @@ notitle: true
           <h4 class="fst-italic">Categories</h4>
           <ol class="list-unstyled">
             {% for categorie in page.categories %}
-            <li><a href="/categories/#{{ categorie | slugify }}"><span class="badge rounded-pill bg-warning">{{ categorie }}</span></a></li>
+            <li><a href="/categories/#{{ categorie | slugify }}"><span class="badge bg-yellow-500">{{ categorie }}</span></a></li>
             {% endfor %}
           </ol>
         </div>
@@ -33,7 +33,7 @@ notitle: true
           <h4 class="fst-italic">Tags</h4>
           <ol class="list-unstyled">
             {% for tag in page.tags %}
-            <li><a href="/tags/#{{ tag | slugify }}"><span class="badge rounded-pill bg-info">{{ tag }}</span></a></li>
+            <li><a href="/tags/#{{ tag | slugify }}"><span class="badge bg-blue-400">{{ tag }}</span></a></li>
             {% endfor %}
           </ol>
         </div>
