--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -13,9 +13,9 @@ notitle: true
 
     <div class="w-full md:w-1/4">
       <h2 class="block sm:hidden">Link section</h2>
-      <div class="position-sticky" style="top: 2rem;">
+      <div>
 
-        <div class="p-4 mb-3 bg-light rounded position-relative">
+        <div>
           <h4 class="fst-italic">Github</h4>
           <p>{{ page.github | remove: "https://github.com/" }}</p>
           <a href="{{ page.github }}" class="stretched-link" aria-label="open github repo"></a>
