--- a/_includes/base/footer.html
+++ b/_includes/base/footer.html
@@ -1,5 +1,5 @@
 <footer class="cm-gray-2 body-font">
-    <div class="container px-5 py-8 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+    <div class="container px-5 py-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
         <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
           <img src="{{ '/assets/logo.png' | relative_url }}" alt="logo" height="32" width="32" class="h-8">
