--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -6,8 +6,8 @@ notitle: true
 <span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.publisher %}</span>
 </h2>
 
-<div class="md:flex md:flex-row">
-    <div class="w-full md:w-3/4 mr-px">
+<div class="md:flex md:flex-row flex-wrap">
+    <div class="w-full md:w-3/4">
         {{ content }}
     </div>
 
