--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -5,7 +5,7 @@ notitle: true
 <h1>
   <div class="flex">
     {% if page.github %}
-    <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-circle" width="40" height="40" style="margin:0px">
+    <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-full" width="40" height="40" style="margin:0px">
     {% endif %}
     {{ page.name }}
   </div>
