--- a/assets/index.css
+++ b/assets/index.css
@@ -54,4 +54,16 @@ layout: empty
     .badge {
         @apply py-1 px-2.5 rounded-full
     }
+
+    .list-unstyled {
+        padding-left: 0px;
+        position: initial;
+        @apply list-none
+    }
+
+    .list-unstyled li {
+        padding-left: 0px;
+        position: initial;
+        @apply list-none
+    }
 }
