--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -1,6 +1,7 @@
 ---
 layout: content
 notitle: true
+fullwith: true
 ---
 <h2>{{ page.name }}
 <span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.publisher %}</span>
