--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -6,9 +6,9 @@
       </a>
 
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:cm-gray-1" href="{{ '/blog' | relative_url }}">Blog</a>
-        <a class="mr-5 hover:cm-gray-1" href="{{ site.plugin-link }}">Plugins</a>
-        <a class="mr-5 hover:cm-gray-1" href="{{ site.doc-link }}">Docs</a>
+        <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.blog-link %}">Blog</a>
+        <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.plugin-link %}">Plugins</a>
+        <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.doc-link %}">Docs</a>
       </nav>
 
       {% if page.main_page %}
