--- a/_includes/block/features.html
+++ b/_includes/block/features.html
@@ -21,7 +21,7 @@
           <div class="bg-gray-100 p-6 rounded-lg">
             <h3 class="tracking-widest text-primary text-xs font-medium title-font">{{ item.subtitle }}</h3>
             <h2 class="text-lg cm-gray-1 font-medium title-font mb-4">{{ item.title }}</h2>
-            <p class="leading-relaxed text-base">{{ item.description }}
+            <p class="leading-relaxed text-base">{{ item.text }}
               {% if include.extend and item.extend %}<br><br>{{ item.extend }}{% endif %}
             </p>
             <a class="text-secondary inline-flex items-center" href="{% include fnc/link.html item=item.link %}" alt="learn more">Learn More {% include fnc/learn_more.html %}</a>
