--- a/_layouts/branche.html
+++ b/_layouts/branche.html
@@ -5,7 +5,7 @@ layout: default
 {% include block/hero.html title=site.tagline title_2=page.title_2 image='https://dummyimage.com/860x600' color='with InvenTree' detail='Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.' %}
 
 {% assign data = site.data[page.data] %}
-{% include block/features.html data=data %}
+{% include block/features.html data=data extend=true %}
 
 {% include block/cta.html cta=site.data.ctas.learn %}
 {% include block/functions.html data=site.data.functions.general extend=true %}
