--- a/_includes/block/hero.html
+++ b/_includes/block/hero.html
@@ -9,7 +9,9 @@
           <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary">{{ include.color }}</span>
           {% endif %}
         </h1>
+        {% if include.detail %}
         <p class="mb-8 leading-relaxed">{{ include.detail }}</p>
+        {% endif %}
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-secondary border-0 py-2 px-6 focus:outline-none hover:bg-primary rounded text-lg">Button</button>
           <button class="ml-4 inline-flex cm-hvr-btn border-0 py-2 px-6 focus:outline-none text-lg">Button</button>
