--- a/_includes/block/hero.html
+++ b/_includes/block/hero.html
@@ -13,12 +13,9 @@
         <p class="mb-8 leading-relaxed">{{ include.detail }}</p>
         {% endif %}
         {% if include.buttons %}
-        <div class="flex justify-center">
+        <div class="flex-wrap justify-center">
           {% for item in include.buttons %}
-          <button class="
-          {% if  forloop.index != 0 %}ml-4{% endif %}
-          {% if item.primary %}cm-hvr-btn-primary{% else%}cm-hvr-btn{% endif%}
-          inline-flex border-0 py-2 px-6 focus:outline-none text-lg">{{item.text}}</button>
+          <button class="{% if  forloop.index != 0 %}ml-4{% endif %} mb-4 {% if item.primary %}cm-hvr-btn-primary{% else%}cm-hvr-btn{% endif %} inline-flex border-0 py-2 px-6 focus:outline-none text-lg">{{item.text}}</button>
           {% endfor %}
         </div>
         {% endif %}
