--- a/_includes/block/hero.html
+++ b/_includes/block/hero.html
@@ -15,7 +15,9 @@
         {% if include.buttons %}
         <div class="flex-wrap justify-center">
           {% for item in include.buttons %}
-          <button class="{% if  forloop.index != 0 %}ml-4{% endif %} mb-4 {% if item.primary %}cm-hvr-btn-primary{% else%}cm-hvr-btn{% endif %} inline-flex border-0 py-2 px-6 focus:outline-none text-lg">{{item.text}}</button>
+          <button class="{% if  forloop.index != 0 %}ml-4{% endif %} mb-4 {% if item.primary %}cm-hvr-btn-primary{% else%}cm-hvr-btn{% endif %} inline-flex border-0 py-2 px-6 focus:outline-none text-lg">
+            {% if item.link %}<a href="{{item.link}}">{% endif %}{{item.text}}{% if item.link %}</a>{% endif %}
+          </button>
           {% endfor %}
         </div>
         {% endif %}
