--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto min-h-screen"
+<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto"
 {% if layout.fullwith %}
 style="max-width: 90%"
 {% endif %}
