--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
     {% endif %}
 </header>
 
-<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto min-h-screen">
+<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto">
     <h1>{{ page.title }}</h1>
     <p>
       {{ page.date | date_to_string }}
