--- a/_layouts/alternatives.html
+++ b/_layouts/alternatives.html
@@ -1,7 +1,7 @@
 ---
 layout: content
 ---
-<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto">
+<article>
     {% include partial/alert.html
         style='info'
         title='caveat'
