--- a/_layouts/plugin_highlight.html
+++ b/_layouts/plugin_highlight.html
@@ -1,7 +1,7 @@
 ---
 layout: content
 ---
-<article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto">
+<article>
     <h2>{{ page.title }}</h2>
     {{ content }}
     {% if page.plugin %}
