--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,11 +2,7 @@
 layout: default
 ---
 
-<article
-{% if layout.fullwith %}
-style="max-width: 90%"
-{% endif %}
->
+<article{% if layout.fullwith %} class="max-w-p90"{% endif %}>
     {% if layout.notitle != true %}
     <h2>{{ page.title }}</h2>
     {% endif %}
