--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,7 @@ layout: default
 <header>
     {% if page.backLink or page.backLink == nil %}
     <a href="{{ '/blog' | relative_url }}" class="flex items-center m-5 text-xl hover:underline">
-        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                clip-rule="evenodd"></path>
-        </svg>
+        <img class="w-6 h-6" src="{{ '/assets/back.svg' | relative_url }}" />
         <span>Back</span>
     </a>
     {% endif %}
