should sound more englisch

--- a/_layouts/alternatives.html
+++ b/_layouts/alternatives.html
@@ -13,7 +13,7 @@ layout: content
     {% include partial/alert.html
         style='info'
         title='(F)OSS'
-        desc="This alternative is (F)OSS - let's celebrate this by heading over, giving it a good look and staring the project! Motiviation keeps projects and maintainers healthy."
+        desc="This alternative is (F)OSS - let's celebrate this by heading over, giving it a good look and staring the project! Motiviation keeps projects and maintainers going."
     %}
     {% endif %}
     View other <a href="{% link alternatives/index.md %}">Alternatives</a>.
