also track outbound links; ie demo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,6 @@
     </div>
 </body>
 
-<script defer data-domain="matmair.github.io" src="https://plausible.io/js/plausible.js"></script>
+<script defer data-domain="matmair.github.io" src="https://plausible.io/js/script.outbound-links.js"></script>
 
 </html>
