--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="{{ '/assets/index.css' | relative_url }}">
-<link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.ico' | relative_url }}">
+<link rel="shortcut icon" type="image/png" href="{{ '/assets/icon/favicon.ico' | relative_url }}">
 
 <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
 <meta itemprop="description" name="description"
