make analytics configurable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include base/head.html %}
-    <script defer data-domain="matmair.github.io" src="https://plausible.io/js/script.outbound-links.js"></script>
+    <script defer data-domain="{{site.tracking-domain}}" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
