--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include base/head.html %}
-    <script defer data-domain="{{site.tracking-domain}}" src="https://plausible.io/js/script{{site.tracking-add}}.js"></script>
+    <script defer data-domain="{{site.analytics-domain}}" src="https://plausible.io/js/script{{site.analytics-add}}.js"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
