--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -8,10 +8,12 @@
         <div class="flex-grow xs:flex-none"></div>
 
         <nav class="md:mr-auto md:py-1 xs:ml-4 xs:pl-4 xs:border-l xs:border-gray-400	flex flex-wrap items-center text-base justify-center">
+            <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.blog-link %}">Blog</a>
             <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.demo-link %}">Demo</a>
             <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.deploy-link %}">Deploy</a>
             <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.doc-link %}">Docs</a>
-            <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.blog-link %}">Blog</a>
+            <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.contribute-link %}">Contribute</a>
+            <a class="mr-5 hover:cm-gray-1" href="{% include fnc/link.html item=site.plugins-link %}">Plugins</a>
         </nav>
 
         {% if page.main_page %}
