--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -19,7 +19,7 @@
             <a class="mr-2 hover:cm-gray-1" href="#business">for <strong>business</strong></a>
             <a class="mr-2 hover:cm-gray-1" href="#edu">for <strong>edu</strong></a>
         </nav>
-        <a href="{{site.demo-link}}" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+        <a href="/demo.html" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
         Open demo
       </a> {% endif %}
     </div>
