Adds gallery / carousel for app images

--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -2,8 +2,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" href="{{ '/assets/splide/css/splide.min.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/index.css' | relative_url }}">
 <link rel="shortcut icon" type="image/png" href="{{ '/assets/icon/favicon.ico' | relative_url }}">
+
+<script src="{{ '/assets/splide/js/splide.min.js' | relative_url }}"></script>
 
 <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
 <meta itemprop="description" name="description"
