--- a/_includes/block/stats.html
+++ b/_includes/block/stats.html
@@ -5,7 +5,7 @@
     {% assign stats = stats|default:site.data.general.stats.stats %}
     {% for item in stats %}
       <div class="p-4 sm:w-1/4 w-1/2">
-        <h2 class="title-font font-medium sm:text-4xl text-3xl cm-gray-1">{{ item.number }}</h2>
+        <h2 class="title-font font-medium sm:text-4xl text-3xl cm-gray-1">{{ item.number | intword }}</h2>
         <p class="leading-relaxed">{{ item.name }}</p>
       </div>
     {% endfor %}
