--- a/_includes/block/team.html
+++ b/_includes/block/team.html
@@ -15,7 +15,7 @@
                         <p class="mb-4">{{ item.text }}</p>
                         <span class="inline-flex">
                           {% for link in item.links %}
-                          <a class="cm-gray-3" href="{% include fnc/link.html item=item.link %}" alt="learn more">Learn More <img class="w-4 h-4 ml-2" src="{{ '/assets/learn.svg' | relative_url }}" /></a>
+                          <a class="cm-gray-3" href="{% include fnc/link.html item=link %}" alt="learn more">Learn More <img class="w-4 h-4 ml-2" src="{{ '/assets/learn.svg' | relative_url }}" /></a>
                           {% endfor %}
                         </span>
                     </div>
