--- a/_includes/block/team.html
+++ b/_includes/block/team.html
@@ -8,12 +8,12 @@
 
             {% for item in include.data.team %}
             <div class="p-4 lg:w-1/2">
-                <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
+                <div class="h-full flex sm:flex-row flex-col sm:justify-start justify-center text-center sm:text-left">
                     <div class="flex-grow sm:pl-8">
                         <h2 class="title-font font-medium text-lg cm-gray-1">{{ item.tag }}</h2>
                         <h3 class="cm-gray-3 mb-3">{{ item.name }}</h3>
                         <p class="mb-4">{{ item.text }}</p>
-                        <span class="inline-flex items-center">
+                        <span class="inline-flex">
                           {% for link in item.links %}
                           <a class="cm-gray-3" href="{{ link.link }}" alt="learn more">{{ link.text }}</a>
                           {% endfor %}
