--- a/_includes/base/footer.html
+++ b/_includes/base/footer.html
@@ -27,7 +27,7 @@
 
   <div class="bg-gray-100">
     <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-      <p class="cm-gray-3 text-sm text-center sm:text-left">© 2021 {{ site.title }} by<a href="https://github.com/inventree" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@inventree</a>— website made with &hearts; by<a href="https://github.com/matmair" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@matmair</a></p>
+      <p class="cm-gray-3 text-sm text-center sm:text-left">© 2021-now {{ site.title }} by<a href="https://github.com/inventree" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@inventree</a>— website made with &hearts; by<a href="https://github.com/matmair" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@matmair</a></p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a href="https://github.com/inventree/inventree" alr="github repo" class="ml-3 cm-gray-3">
           <img class="h-5 w-5" src="{{ '/assets/github.svg' | relative_url }}" />
