--- a/_layouts/collection/collection_index.html
+++ b/_layouts/collection/collection_index.html
@@ -3,7 +3,7 @@ layout: default
 ---
   <section class="cm-gray-2 body-font">
     <div class="pt-3 pb-1 section-container">
-      <h1 class="header-text title-font mb-4 cm-gray-2">{{ page.title_text }}</h1>
+      <h1 class="header-text title-font mb-4 cm-gray-2">{{ page.title_text }}<a href="feed.atom" alr="Atom feed" class="ml-3 cm-gray-3"><img class="h-5 w-5" src="{{ '/assets/rss.svg' | relative_url }}" /></a>
       <div class="flex flex-wrap">
 
       {% assign cols = site[page.collection] %}
