--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -8,6 +8,9 @@
 
 <script src="{{ '/assets/splide/js/splide.min.js' | relative_url }}"></script>
 
+<!-- Fontawesome integration -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
 <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
 <meta itemprop="description" name="description"
     content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
