Add rocket icon

--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -15,7 +15,9 @@
 
         {% if page.main_page %}
         <a href="demo" class="inline-flex items-center bg-gray-100 ml-2 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-        Open demo
-      </a> {% endif %}
+            <span class='fa-solid fa-rocket'></span>&nbsp;
+            Open demo
+        </a>
+        {% endif %}
     </div>
 </header>
