oonly target collection

--- a/_layouts/collection/collection_base.html
+++ b/_layouts/collection/collection_base.html
@@ -11,7 +11,7 @@ layout: default
     {% endif %}
 </header>
 
-<article>
+<article class="m-5 md:m-auto">
     <h1>{{ page.title }}</h1>
     <p>
       {{ page.date | date_to_string }}
