--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include base/head.html %}
-    <script async src="https://{{site.analytics-domain}}/script.js" data-account-id="{{site.analytics-id}}"></script>
+    <script async defer src="https://{{site.analytics-domain}}" data-website-id="{{site.analytics-id}}"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
