fix logo size and margin

--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -3,9 +3,11 @@ layout: content
 notitle: true
 ---
 <h1>
-  <div class="flex">
+  <div class="flex items-end">
     {% if page.github %}
-    <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-full" width="40" height="40" style="margin:0px">
+    <div class="mb-1">
+      <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-full" width="40" height="40" style="margin:0px">
+    </div>
     {% endif %}
     {{ page.name }}
   </div>
