--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -19,7 +19,7 @@ notitle: true
 {% endif %}
 
 {% if page.website %}
-<a href="{{page.website}}"><span class="badge bg-secondary">Official Website</span></a>
+<a href="{{page.website}}"><span class="badge bg-secondary">Website</span></a>
 {% endif %}
 </div>
 
