use links without html

--- a/_includes/block/team.html
+++ b/_includes/block/team.html
@@ -1,6 +1,6 @@
 <section class="cm-gray-2 body-font">
     <div class="section-container">
-        <a href="{% link about/team.html %}" alt="Learn more about the team">
+        <a href="/about/team" alt="Learn more about the team">
         <div class="flex flex-col text-center w-full mb-20">
             <h1 class="text-2xl font-medium title-font mb-4 cm-gray-1 tracking-widest">OUR TEAM</h1>
             <p class="lg:w-2/3 mx-auto leading-relaxed text-base">{{ include.data.text }}</p>
